--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "soap": "^0.9.1",
     "strongloop-license": "^1.0.2"
   },
+  "engines": {
+    "node": "0.12.x"
+  },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
   },
